--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,10 +42,10 @@
 
                         <!-- 功能下拉菜单 -->
                         <div class="function-dropdown" id="functionDropdown">
-                            <div class="function-item" id="viewModeToggle">
-                                <i class="fas fa-list"></i>
-                                <span>选择主页</span>
-                            </div>
+                            <div class="function-item" id="categorySettingsButton">
+                                    <i class="fas fa-sliders-h"></i>
+                                    <span>分类设置</span>
+                                </div>
                             <div class="function-item" id="themeToggle">
                                 <i class="fas fa-moon"></i>
                                 <span>切换主题</span>
@@ -57,11 +57,10 @@
                         </div>
                     </div>
 
-                    <div class="action-button" id="categorySettingsButton">
-                        <i class="fas fa-sliders-h"></i>
-                        <span>分类设置</span>
+                    <div class="action-button" id="viewModeToggle">
+                        <i class="fas fa-home"></i>
+                        <span>选择主页</span>
                     </div>
-
 
                     <div class="action-button" id="searchButton">
                         <i class="fas fa-search"></i>
