--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,8 @@
     <link rel='stylesheet' href='/stylesheets/styles.css' />
     <link rel='stylesheet' href='/stylesheets/all.min.css' />
 
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="9ff3dec1-fc8a-41cd-8de1-84e40212d86b"></script>
+
     <link rel="canonical" href="https://www.storynook.cn/">
 
     <!-- SEO优化meta标签 -->
