--- a/views/redirect/index.ejs
+++ b/views/redirect/index.ejs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/stylesheets/all.min.css">
     <link rel="stylesheet" href="/live2d/css/live2d.css"/>
     <script type="text/javascript" src="/javascripts/jquery.min.js"></script>
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="9ff3dec1-fc8a-41cd-8de1-84e40212d86b"></script>
     <script>
         function redirectHome(){
             const homepage = localStorage.getItem('homepage');
