--- a/views/read.ejs
+++ b/views/read.ejs
@@ -5,8 +5,8 @@
     <title>小故事铺是一个专注于原创短篇故事的平台，涵盖睡前、恐怖、亲情、儿童等多个类型。每天更新精彩故事，陪你度过温暖或惊悚的时刻 - 小故事</title>
     <link rel="icon" type="image/png" href="/images/story.png">
     <link rel="stylesheet" href="/stylesheets/read.css">
-
     <link rel="stylesheet" href="/stylesheets/all.min.css">
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="9ff3dec1-fc8a-41cd-8de1-84e40212d86b"></script>
 </head>
 
 <body>
