--- a/views/search.ejs
+++ b/views/search.ejs
@@ -34,13 +34,13 @@
                         <div class="quick-tags" id="quickTags">
                             <button class="tag" data-tag="1">睡前</button>
                             <button class="tag" data-tag="11">恐怖</button>
-                            <button class="tag" data-tag="8">童话</button>
+                            <button class="tag" data-tag="8">经典</button>
                             <button class="tag" data-tag="2">儿童</button>
                             <button class="tag" data-tag="5">益智</button>
                             <button class="tag" data-tag="6">历史</button>
                             <button class="tag" data-tag="7">预言</button>
                             <button class="tag" data-tag="9">成语</button>
-                            <button class="tag" data-tag="3">格林</button>
+                            <button class="tag" data-tag="3">童话</button>
                             <button class="tag" data-tag="10">作文</button>
                         </div>
                         <!-- 插画区域：展示开源免费插画（unDraw，MIT License） -->
