--- a/views/search.ejs
+++ b/views/search.ejs
@@ -38,7 +38,7 @@
                             <button class="tag" data-tag="2">儿童</button>
                             <button class="tag" data-tag="5">益智</button>
                             <button class="tag" data-tag="6">历史</button>
-                            <button class="tag" data-tag="7">预言</button>
+                            <button class="tag" data-tag="7">寓言</button>
                             <button class="tag" data-tag="9">成语</button>
                             <button class="tag" data-tag="3">童话</button>
                             <button class="tag" data-tag="10">作文</button>
