--- a/views/read.ejs
+++ b/views/read.ejs
@@ -2,7 +2,8 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>小故事铺是一个专注于精选短篇故事的平台，涵盖睡前、恐怖、亲情、儿童等多个类型。每天更新精彩故事，陪你度过温暖或惊悚的时刻 - 小故事</title>
+<!--     <title>小故事铺是一个专注于精选短篇故事的平台，涵盖睡前、恐怖、亲情、儿童等多个类型。每天更新精彩故事，陪你度过温暖或惊悚的时刻 - 小故事</title> -->
+    <title><%= storyTitle %>：一个专注于精选短篇故事的平台，涵盖睡前、恐怖、亲情、儿童等多个类型的故事平台 - <%= categoryName %> - 小故事铺</title>
     <link rel="icon" type="image/png" href="/images/story.png">
     <link rel="stylesheet" href="/stylesheets/read.css">
     <link rel="stylesheet" href="/stylesheets/all.min.css">
@@ -15,10 +16,10 @@
             <!-- 阅读页面视图 -->
             <div class="article-view">
                 <div class="article-header">
-                    <button class="back-btn">
-                        <i class="fas fa-arrow-left"></i>
-                        <span>返回</span>
-                    </button>
+                    <a class="back-btn" href="/" aria-label="回到主页">
+                        <img src="/images/story.png" alt="小故事铺 Logo" class="back-logo">
+                        <span>回到主页</span>
+                    </a>
 
                     <h1 class="article-title" id="storyTitle"><%=storyTitle %></h1>
 
